# sprout

./: .pre-commit-config.yaml  Makefile  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/src/core/: auth.py  database.py  logging.py  prompts.py  settings.py  utils.py
backend/app/src/features/games/face/: agents.py  endpoints.py  models.py  prompts.py  schemas.py  service.py
backend/app/src/features/guardian/: agents.py  endpoints.py  prompt.py  schemas.py  service.py
backend/app/src/features/users/: model.py
backend/migrations/: env.py
backend/migrations/versions/: 1960e480ce41_message.py  32dd8dae4c77_message.py  bb129ee79369_message.py  cff4aaa52a07_message.py  f770e37cc309_message.py
frontend/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  routeTree.gen.ts
frontend/src/components/: AuthPopup.tsx  DraggableItem.tsx  DroppableAnswer.tsx  GameLayout.tsx  HelpButton.tsx  Loading.tsx  Sidebar.tsx  SpeechBubble.tsx  SpeechBubbleExample.tsx  SpeechBubbleManager.tsx  Timer.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/routes/: __root.tsx  about.tsx  game.tsx  index.tsx  profile.tsx
frontend/src/routes/games/: face.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  counterStore.ts  gameStore.ts  helpButtonStore.ts  loadingStore.ts  speechBubbleStore.ts  timerStore.ts
